--- a/style.css
+++ b/style.css
@@ -1,203 +1,273 @@
-@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap');
-* {box-sizing: border-box;}
+@import url("https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap");
+* {
+  box-sizing: border-box;
+}
 body {
-    min-height: 100vh;
-    padding: 0;
-    margin: 0;
-    font-family: 'Epilogue', sans-serif;
-    color: hsl(0, 0%, 41%);
-    background-color: hsl(0, 0%, 98%);
-}    
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+  font-family: "Epilogue", sans-serif;
+  color: hsl(0, 0%, 41%);
+  background-color: hsl(0, 0%, 98%);
+}
 main {
-    width: 100%;
-    display: grid;     
-    background-color: hsl(0, 0%, 98%);}
-.imgHeroDesktop, .imgHeroTablet {display: none;}
+  width: 100%;
+  display: grid;
+  background-color: hsl(0, 0%, 98%);
+}
+.imgHeroDesktop,
+.imgHeroTablet {
+  display: none;
+}
 .head {
-    padding: 24px 16px;
-    display: grid;
-    align-items: center;
-    align-content: center;
-    grid-template-columns: 50% 50% ;
+  padding: 24px 16px;
+  display: grid;
+  align-items: center;
+  align-content: center;
+  grid-template-columns: 50% 50%;
 }
 .logoimg {
-    width: 83px;
-    height: auto;
-    cursor: pointer;
+  width: 83px;
+  height: auto;
+  cursor: pointer;
 }
 .menuimg {
-    width: 32px;
-    height: auto;
-    justify-self: end;
-    cursor: pointer;
+  width: 32px;
+  height: auto;
+  justify-self: end;
+  cursor: pointer;
 }
 .closeimg {
-    width: 24px;
-    height: auto;
-    justify-self: end;
-    cursor: pointer;
+  width: 24px;
+  height: auto;
+  justify-self: end;
+  cursor: pointer;
 }
-.closeimg:hover, .menuimg:hover, .logoimg:hover {
-    filter: brightness(4);
+.closeimg:hover,
+.menuimg:hover,
+.logoimg:hover {
+  filter: brightness(4);
 }
 .menu {
-    display: none;
-    /*display:grid;*/
-    min-height: 100vh;
-    padding: 20px;
-    width: 64%;
-    min-width: 240px;
-    max-width: 400px;  
-    grid-template-columns: 100%;
-    align-content: start;
-    background-color:white;
-    z-index: 2;
-    position: absolute;
-    top: 0;
-    right: 0;   
+  display: none;
+  /*display:grid;*/
+  min-height: 100vh;
+  padding: 20px;
+  width: 64%;
+  min-width: 240px;
+  max-width: 400px;
+  grid-template-columns: 100%;
+  align-content: start;
+  background-color: white;
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 .menubox {
- /* display: grid;*/
-    display: none;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 1;
-    background-color:hsl(0, 0%, 8%, 70%);
+  /* display: grid;*/
+  display: none;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+  background-color: hsl(0, 0%, 8%, 70%);
 }
 ul {
-    list-style-type: none;
-    margin-left: -32px;
-    padding: 0;
-    font-size: 16px;
-    font-weight: 500;
+  list-style-type: none;
+  margin-left: -32px;
+  padding: 0;
+  font-size: 16px;
+  font-weight: 500;
 }
-li{line-height: 280%;}
+li {
+  line-height: 280%;
+}
 li a {
-    text-decoration: none;
-    color: inherit;
-    line-height: 240%;
+  text-decoration: none;
+  color: inherit;
+  line-height: 240%;
 }
-li, li.features>div>a {
-    background-repeat: no-repeat;
-    background-position: left center;
-    background-size: 18px;
-    padding: 0px 0 0 40px;
-    margin-left: 16px;
+li,
+li.features > div > a {
+  background-repeat: no-repeat;
+  background-position: left center;
+  background-size: 18px;
+  padding: 0px 0 0 40px;
+  margin-left: 16px;
 }
- li.company>div>a {margin-left: 16px;}
-li.features>div>a:nth-of-type(1) {background-image: url('icon-todo.svg');}
-li.features>div>a:nth-of-type(2) {background-image: url('icon-calendar.svg');}
-li.features>div>a:nth-of-type(3) {background-image: url('icon-reminders.svg');}
-li.features>div>a:nth-of-type(4) {background-image: url('icon-planning.svg');}
+li.company > div > a {
+  margin-left: 16px;
+}
+li.features > div > a:nth-of-type(1) {
+  background-image: url("icon-todo.svg");
+}
+li.features > div > a:nth-of-type(2) {
+  background-image: url("icon-calendar.svg");
+}
+li.features > div > a:nth-of-type(3) {
+  background-image: url("icon-reminders.svg");
+}
+li.features > div > a:nth-of-type(4) {
+  background-image: url("icon-planning.svg");
+}
 
-li.features>div>a:hover {filter: saturate(300%) brightness(100%);}
-.dropdown-content {
-display: none;
-grid-template-columns: 100%;
+li.features > div > a:hover {
+  filter: saturate(300%) brightness(100%);
 }
-.displayGrid {display: grid;}
-.arrow {margin-left: 16px;}
-.arrowRotate {rotate: 180deg;}   
+.dropdown-content {
+  display: none;
+  grid-template-columns: 100%;
+}
+.displayGrid {
+  display: grid;
+}
+.arrow {
+  margin-left: 16px;
+}
+.arrowRotate {
+  rotate: 180deg;
+}
 .register {
-    width: 100%;
-    height: 42px;
-    border-radius: 1em;
-    border: 2px solid hsl(0, 0%, 41%);
-    margin-left: -16px;
-    color: inherit;
-    font-family: inherit;  
-    background-color: transparent;
-    cursor: pointer;
-    font-size: inherit;
-    font-family: inherit;
+  width: 100%;
+  height: 42px;
+  border-radius: 1em;
+  border: 2px solid hsl(0, 0%, 41%);
+  margin-left: -16px;
+  color: inherit;
+  font-family: inherit;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: inherit;
+  font-family: inherit;
 }
 .register:hover {
-    border: 2px solid hsl(0, 0%, 8%);
-    color: hsl(0, 0%, 8%);  
+  border: 2px solid hsl(0, 0%, 8%);
+  color: hsl(0, 0%, 8%);
+  animation: learnmoreAnimation 0.5s 1;
 }
-a:hover {color: hsl(0, 0%, 8%);}
-a:hover>img, .arrow:hover {filter: brightness(60%);}
+a:hover {
+  color: hsl(0, 0%, 8%);
+}
+a:hover > img,
+.arrow:hover {
+  filter: brightness(60%);
+}
 .login {
-text-align: center;
-margin-left: -16px;
-margin-top: -8px;
+  text-align: center;
+  margin-left: -16px;
+  margin-top: -8px;
 }
-.imgHeroMobile {width:100%;}
+.imgHeroMobile {
+  width: 100%;
+}
 .section1 {
-    text-align: center;  
-    padding: 16px;  
-    display: grid;
+  text-align: center;
+  padding: 16px;
+  display: grid;
 }
 h1 {
-    font-size: 36px;
-    font-weight: 700;
-    color: hsl(0, 0%, 8%);
-    letter-spacing: -1px;  
+  font-size: 36px;
+  font-weight: 700;
+  color: hsl(0, 0%, 8%);
+  letter-spacing: -1px;
 }
 p {
-    font-size: 16px;
-    font-weight: 500;
-    letter-spacing: 0.1px;
-    line-height: 160%; /* 25.6px */
-    margin-top:-8px;
-    max-width: 500px;
-    justify-self: center;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.1px;
+  line-height: 160%; /* 25.6px */
+  margin-top: -8px;
+  max-width: 500px;
+  justify-self: center;
 }
 .learnmore {
-    display: block;
-    width: 136px;
-    height: 48px;
-    border: 1px solid hsl(0, 0%, 8%);
-    background-color: hsl(0, 0%, 8%);
-    color: hsl(0, 0%, 98%);
-    border-radius: 1em;
-    margin: 24px auto 32px;
-    font-family: inherit;
-    font-size: inherit;
-    cursor: pointer;
+  display: block;
+  width: 136px;
+  height: 48px;
+  border: 1px solid hsl(0, 0%, 8%);
+  background-color: hsl(0, 0%, 8%);
+  color: hsl(0, 0%, 98%);
+  border-radius: 1em;
+  margin: 24px auto 32px;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: pointer;
 }
 .learnmore:hover {
-    color: hsl(0, 0%, 8%);
-    background-color: hsl(0, 0%, 98%);
+  color: hsl(0, 0%, 8%);
+  background-color: hsl(0, 0%, 98%);
+  animation: learnmoreAnimation 0.5s 1;
+}
+@keyframes learnmoreAnimation {
+  0% {
+    outline: 1px solid hsl(0, 0%, 8%, 0%);
+    outline-offset: 1px;
+  }
+  50% {
+    outline: 1px solid hsl(0, 0%, 8%, 65%);
+    outline-offset: 10px;
+  }
+  100% {
+    outline: 1px solid hsl(0, 0%, 8%, 0%);
+    outline-offset: 1px;
+  }
 }
 .section2 {
-    display: grid;
-    width: 100%;
-    max-width: 480px;
-    justify-self: center;
-    justify-content: space-between;
-    grid-template-columns: 24% 15.5% 19% 17.2%;
-    column-gap: 24px;
-    padding-inline: 16px;
-    margin-bottom: 24px;
+  display: grid;
+  width: 100%;
+  max-width: 480px;
+  justify-self: center;
+  justify-content: space-between;
+  grid-template-columns: 24% 15.5% 19% 17.2%;
+  column-gap: 24px;
+  padding-inline: 16px;
+  margin-bottom: 24px;
 }
 .clientimg {
-    width: 100%;
-    height: auto;
-    cursor: pointer;
+  width: 100%;
+  height: auto;
+  cursor: pointer;
 }
-.clientimg:hover {filter: brightness(60%);}
-.attribution { font-size: 11px; text-align: center; margin-top: 32px;}
-.attribution a { color: hsl(228, 45%, 44%); }
+.clientimg:hover {
+  filter: brightness(60%);
+}
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  margin-top: 32px;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
 
 @media screen and (min-width: 481px) {
-.imgHeroMobile {display: none;} 
-.imgHeroTablet {display: block; width: 100%;} 
-h1 {
+  .imgHeroMobile {
+    display: none;
+  }
+  .imgHeroTablet {
+    display: block;
+    width: 100%;
+  }
+  h1 {
     margin-top: 48px;
     margin-bottom: 48px;
+  }
+  .head {
+    padding: 32px 24px;
+  }
 }
-.head {padding: 32px 24px;}
-}
-
 
 @media screen and (min-width: 900px) {
-.menubox, .menuimg, .closeimg, .imgHeroTablet {
-    display: none;}
+  .menubox,
+  .menuimg,
+  .closeimg,
+  .imgHeroTablet {
+    display: none;
+  }
 
-.dropdown-content {
+  .dropdown-content {
     /*  display: none;*/
     /* display: grid;*/
     position: absolute;
@@ -207,137 +277,145 @@ h1 {
     z-index: 2;
     box-shadow: 4px 4px 16px hsl(0, 0%, 8%, 20%);
     font-size: 15px;
-}
-.dropdown-content-left {
-    transform: translate(-70px,0px); 
-}
-body {
+  }
+  .dropdown-content-left {
+    transform: translate(-70px, 0px);
+  }
+  body {
     display: grid;
-    grid-template-columns: auto;   
-}
-main{
-    width: 100%;   
+    grid-template-columns: auto;
+  }
+  main {
+    width: 100%;
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto auto;
     justify-self: center;
-}
-.myHeader {
-    max-height: 130px;    
+  }
+  .myHeader {
+    max-height: 130px;
     padding: 21px 2.78% 64px;
-    grid-column: 1/span 2;
+    grid-column: 1 / span 2;
     grid-row: 1;
     display: grid;
     grid-template-rows: auto;
     grid-template-columns: 12% 88%;
-    font-size: 15px;  
-}
-.snapdesktop {
+    font-size: 15px;
+  }
+  .snapdesktop {
     max-height: 130px;
     margin-top: 24px;
-}
-.menudesktop {
+  }
+  .menudesktop {
     display: grid;
-    grid-template-columns: auto auto;  
+    grid-template-columns: auto auto;
     max-height: 112px;
-}
-.menuleft>li, .menuright>li {
+  }
+  .menuleft > li,
+  .menuright > li {
     float: left;
     margin: 0;
-    padding-inline:30px 0;   
+    padding-inline: 30px 0;
   }
-ul.menuright {
+  ul.menuright {
     float: right;
     width: 251px;
     margin-right: 0;
     margin-left: auto;
-    max-height: 94px;   
-}
-.menuright>li {
+    max-height: 94px;
+  }
+  .menuright > li {
     margin-inline: 30px 0;
-}
-.register {  
+  }
+  .register {
     width: 50%;
     min-width: 104px;
     height: 42px;
-}
-.section1 {
+  }
+  .section1 {
     grid-column: 1;
-    grid-row: 2;   
- }
- .section2 {
+    grid-row: 2;
+  }
+  .section2 {
     grid-column: 1;
-    grid-row: 3;   
- }
-.imgHeroDesktop {
+    grid-row: 3;
+  }
+  .imgHeroDesktop {
     grid-column: 2;
-    grid-row:2/span 2;
+    grid-row: 2 / span 2;
     display: block;
     width: 33vw;
     margin-right: 9.03vw;
     align-self: last baseline;
-}
-.section1, .section2 {
+  }
+  .section1,
+  .section2 {
     text-align: left;
     padding-inline: 10.5vw;
-}
-h1 {  
+  }
+  h1 {
     display: block;
     width: 36vw;
     /*font-size: 80px;*/
     font-size: 5.5556vw;
-   /* margin-top: 80px;*/
+    /* margin-top: 80px;*/
     margin-top: 8.889vh;
     line-height: 100%; /* 80px */
     letter-spacing: -1.6px;
-}
-p {
+  }
+  p {
     display: block;
-  /*  width: 430px;*/
+    /*  width: 430px;*/
     width: 29.9vw;
     font-size: 16px;
     line-height: 153%; /* 27.54px */
     letter-spacing: 0.09px;
     justify-self: start;
-}
-.learnmore {
+  }
+  .learnmore {
     width: 164px;
     height: 56px;
     font-size: 18px;
     font-weight: 500;
     margin-inline: 0 auto;
-}
-.section2 {
+  }
+  .section2 {
     width: 100%;
     max-width: none;
-    align-self:last baseline;
+    align-self: last baseline;
     margin-bottom: 0;
-}
+  }
 }
 @media screen and (min-width: 1200px) {
-    p{font-size: 18px;}
+  p {
+    font-size: 18px;
+  }
 }
 @media screen and (min-width: 1600px) {
-main {
+  main {
     justify-self: center;
-}
-.myHeader {
+  }
+  .myHeader {
     width: 1600px;
     justify-self: center;
-}
-h1 {
+  }
+  h1 {
     width: 576px;
     font-size: 88px;
-}
-p {width: 479px;}
-.imgHeroDesktop {
+  }
+  p {
+    width: 479px;
+  }
+  .imgHeroDesktop {
     width: 528px;
-}
-.section1, .section2 {
-    justify-self:self-end;
-}
-.section1, .section2 {
+  }
+  .section1,
+  .section2 {
+    justify-self: self-end;
+  }
+  .section1,
+  .section2 {
     width: 920px;
-   padding-inline: 168px;
-}
+    padding-inline: 168px;
+  }
 }
